--- a/selectors.css
+++ b/selectors.css
@@ -1,4 +1,4 @@
-/* Style the HTML elements according to the following instructions. 
+/* Style the HTML elements - Using Certain Selectors
 DO NOT ALTER THE EXISTING HTML TO DO THIS.  WRITE ONLY CSS!
 
 /* Give the <body> element a background of #bdc3c7*/
